--- a/go_kart_zone/Apps/contacto/templates/contacto/contacto.html
+++ b/go_kart_zone/Apps/contacto/templates/contacto/contacto.html
@@ -3,10 +3,24 @@
 {% load static %}
 
 {% block content%}
-<p>
-    <form method="post"></form>
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Enviar</button>
-</p>
+
+<div class="formulario-contacto">
+
+    {% if "valid" in request.GET %}
+    
+        <p style="color: white; text-align: center;">
+            Informacion enviada correctamente, gracias
+        </p>
+
+    {% else %}
+
+    <form action="" method="post" style="text-align: center;">
+        {% csrf_token %}
+        <table style="margin: 20px auto; color: white;">
+            {{form.as_table}}
+        </table>
+        <button type="submit" style="width: 150px;" >Enviar</button>
+    </form>
+    {% endif %}
+</div>
 {% endblock %}
